@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    //id 'com.google.gms.google-services'
 }
 
 android {
@@ -11,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.flo"
-        minSdk 21
+        minSdk 23
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -28,6 +27,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 
     compileOptions {
@@ -41,37 +41,35 @@ android {
 }
 
 kapt {
-    javacOptions {
-        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
-    }
+    correctErrorTypes = true
 }
 
 dependencies {
-    // ✅ Kotlin 1.9.0 호환 Firebase BoM 버전
-    //implementation platform('com.google.firebase:firebase-bom:32.1.1')
+    // ✅ Kakao SDK
+    implementation "com.kakao.sdk:v2-common:2.19.0"
+    implementation "com.kakao.sdk:v2-user:2.19.0"
 
-
-    //implementation 'com.google.firebase:firebase-analytics'
-    //implementation 'com.google.firebase:firebase-database'
-
-
-
+    // ✅ Retrofit + Gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
-
+    // ✅ Room DB
     implementation "androidx.room:room-runtime:2.5.2"
     kapt "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
 
-    // AndroidX 및 기본 라이브러리
+    // ✅ AndroidX 기본
     implementation "androidx.core:core-ktx:1.12.0"
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "com.google.android.material:material:1.11.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
-    // 테스트
+    // ✅ Glide (프로필 이미지)
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    kapt 'com.github.bumptech.glide:compiler:4.16.0'
+
+    // ✅ 테스트
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
